add get sysinfo method
