# backend/basic/docs/swagger.yaml
@@ -11,6 +11,8 @@ definitions:
         type: string
       cmd:
         type: string
+      pid:
+        type: string
       ppid:
         type: string
       psr:
@@ -31,6 +33,29 @@ definitions:
   model.Script:
     properties:
       script:
+        type: string
+    type: object
+  model.SysInfo:
+    properties:
+      countUser:
+        type: string
+      cpuModelName:
+        type: string
+      cpus:
+        type: integer
+      currentTime:
+        type: string
+      loadLastFifteenMin:
+        type: number
+      loadLastFiveMin:
+        type: number
+      loadLastOneMin:
+        type: number
+      memAvailable:
+        type: string
+      memTotal:
+        type: string
+      runningTime:
         type: string
     type: object
   web.APIError:
@@ -92,6 +117,22 @@ paths:
           schema:
             items:
               $ref: '#/definitions/model.Process'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.APIError'
+  /testapi/get-system-info:
+    get:
+      description: get system info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.SysInfo'
             type: array
         "500":
           description: Internal Server Error
